@@ -45,13 +45,13 @@ TukeyHSD.aov <-
         nn <- nn[!nn_na]
     }
     out <- setNames(vector("list", length(tabs)), names(tabs))
-    MSE <- sum(resid(x)^2)/x$df.residual
+    MSE <- sum(x$residuals^2)/x$df.residual
     for (nm in names(tabs)) {
         tab <- tabs[[nm]]
         means <- as.vector(tab)
         nms <- if(length(d <- dim(tab)) > 1L) {
             dn <- dimnames(tab)
-            apply(do.call("expand.grid", dn), 1L, paste, collapse=":")
+            apply(do.call("expand.grid", dn), 1L, paste, collapse = ":")
         } else names(tab)
         n <- nn[[nm]]
         ## expand n to the correct length if necessary
@@ -68,27 +68,28 @@ TukeyHSD.aov <-
         width <- qtukey(conf.level, length(means), x$df.residual) *
             sqrt((MSE/2) * outer(1/n, 1/n, "+"))[keep]
         est <- center/(sqrt((MSE/2) * outer(1/n, 1/n, "+"))[keep])
-        pvals <- ptukey(abs(est),length(means),x$df.residual,lower.tail=FALSE)
+        pvals <- ptukey(abs(est), length(means), x$df.residual,
+                        lower.tail = FALSE)
         dnames <- list(NULL, c("diff", "lwr", "upr","p adj"))
         if (!is.null(nms)) dnames[[1L]] <- outer(nms, nms, paste, sep = "-")[keep]
         out[[nm]] <- array(c(center, center - width, center + width,pvals),
-                           c(length(width), 4), dnames)
+                           c(length(width), 4L), dnames)
     }
-    class(out) <- c("multicomp", "TukeyHSD")
+    class(out) <- c("TukeyHSD", "multicomp") # multicomp is historical
     attr(out, "orig.call") <- x$call
     attr(out, "conf.level") <- conf.level
     attr(out, "ordered") <- ordered
     out
 }
 
-print.TukeyHSD <- function(x, digits=getOption("digits"), ...)
+print.TukeyHSD <- function(x, digits = getOption("digits"), ...)
 {
     cat("  Tukey multiple comparisons of means\n")
     cat("    ", format(100*attr(x, "conf.level"), 2),
         "% family-wise confidence level\n", sep = "")
     if (attr(x, "ordered"))
         cat("    factor levels have been ordered\n")
-    cat("\nFit: ", deparse(attr(x, "orig.call"), 500), "\n\n", sep = "")
+    cat("\nFit: ", deparse(attr(x, "orig.call"), 500L), "\n\n", sep = "")
     xx <- unclass(x)
     attr(xx, "orig.call") <- attr(xx, "conf.level") <- attr(xx, "ordered") <- NULL
     xx[] <- lapply(xx, function(z, digits)
@@ -101,20 +102,20 @@ print.TukeyHSD <- function(x, digits=getOption("digits"), ...)
 plot.TukeyHSD <- function (x, ...)
 {
     for (i in seq_along(x)) {
-        xi <- x[[i]][, -4, drop = FALSE] # drop p-values
-        yvals <- nrow(xi):1
+        xi <- x[[i]][, -4L, drop = FALSE] # drop p-values
+        yvals <- nrow(xi):1L
         dev.hold(); on.exit(dev.flush())
         ## xlab, main are set below, so block them from ...
-        plot(c(xi[, "lwr"], xi[, "upr"]), rep.int(yvals, 2), type = "n",
+        plot(c(xi[, "lwr"], xi[, "upr"]), rep.int(yvals, 2L), type = "n",
              axes = FALSE, xlab = "", ylab = "", main = NULL, ...)
         axis(1, ...)
         axis(2, at = nrow(xi):1, labels = dimnames(xi)[[1L]], srt = 0, ...)
         abline(h = yvals, lty = 1, lwd = 0.5, col = "lightgray")
         abline(v = 0, lty = 2, lwd = 0.5, ...)
         segments(xi[, "lwr"], yvals, xi[, "upr"], yvals, ...)
-        segments(as.vector(xi), rep.int(yvals - 0.1, 3), as.vector(xi),
-                 rep.int(yvals + 0.1, 3), ...)
-        title(main = paste0(format(100 * attr(x, "conf.level"), digits = 2),
+        segments(as.vector(xi), rep.int(yvals - 0.1, 3L), as.vector(xi),
+                 rep.int(yvals + 0.1, 3L), ...)
+        title(main = paste0(format(100 * attr(x, "conf.level"), digits = 2L),
                             "% family-wise confidence level\n"),
               xlab = paste("Differences in mean levels of", names(x)[i]))
         box()
